workaround of using powermock and downgrade Mockito